tests/cases/fail/dict_unsupported_value_type.p4
def main() -> None:
    data: dict[str, list[int]] = {}
